--- a/cria_usuario_windows.yaml
+++ b/cria_usuario_windows.yaml
@@ -2,7 +2,7 @@
   tasks:
   - name: Cria usuario novo
     win_user:
-     inameuser: "{{ usuario }}"
+     name: "{{ usuario }}"
      password: "abc@123!"
      state: present
      groups:
